<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>fi.vm.sade.koodisto</groupId>
	<artifactId>koodisto</artifactId>
	<packaging>pom</packaging>
	<version>0.0.1-SNAPSHOT</version>
	<name>Koodisto :: Parent</name>

	<properties>
		<java.version>11</java.version>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.compiler.source>${java.version}</maven.compiler.source>
	</properties>

	<modules>
		<!-- <module>koodisto-audit</module> -->
		<!-- <module>koodisto-common</module> -->
		<module>koodisto-service</module>
		<module>koodisto-api</module>
		<!-- <module>koodisto-ui</module> -->
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<type>pom</type>
				<version>2.6.3</version>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

</project>
